# llm-sidebar-with-context

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml
.husky/: pre-commit
build-scripts/: build.js  pack-crx.js
native/: Cargo.toml
native/host/: Cargo.toml
native/installer/: Cargo.toml
native/installer/src/: main.rs
native/overlay-companion/: Cargo.toml  README.md
research/: multi-agent-memory-top-papers.md  ui-redesign-planning.md
src/: tsconfig.json
src/pages/: native-companion-test.html  sidebar.html  website.html  welcome.html
src/scripts/: agentdropAnimation.ts  agentdropContent.ts  background.js  background.ts  constants.js  constants.ts  env.d.ts  geminiApiService.js  geminiApiService.ts  memoryVisualization.ts  ollamaUtils.ts  sidebar.js  sidebar.ts  tabManager.js  tabManager.ts  types.ts  utils.js  utils.ts  webExtraction.ts
src/styles/: sidebar.css
test-harness/native-companion/: dev-extension-key.txt  run-harness.js
tests/: ollamaUtils.test.ts  setup.ts  tsconfig.json  utils.test.ts  webExtraction.test.ts
tests/controllers/: BackgroundController.test.ts  SidebarController.test.ts  SidebarIntegration.test.ts
tests/memory/: MemoryPipelineOrchestrator.test.ts
tests/models/: AgentMemory.test.ts  ChatHistory.test.ts  ContextBudgetManager.test.ts  ContextManager.test.ts  TabContext.test.ts
tests/services/: DNRService.test.ts  TabService.test.ts  (+4 more)
(+64 files in other folders)
