[package]
name = "llm-sidebar-installer"
version = "0.1.0"
edition = "2021"
description = "Installer for LLM Sidebar Chrome extension + native host"

[[bin]]
name = "llm-sidebar-installer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
